k8s/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata: 
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: mudasarrauf/command-service:latest

---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: commandservice
