k8s/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata: 
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: mudasarrauf/platform-service:latest

---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: platformservice
  - port: 666
    targetPort: 666
    protocol: TCP
    name: platformgrpc
